# anamny-server

./: .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  devenv.nix  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  d9497bd8803c_add_chat_models.py
src/: celery.py  config.py  database.py  main.py  tasks.py
src/auth/: api.py  crud.py  dependencies.py  models.py  schemas.py  utils.py
src/chat/: api.py  crud.py  models.py  schemas.py
